Création des classes métier

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -32,7 +32,9 @@ file.reference.commons-logging-1.1.1.jar=../Librairies/UCanAccess-4.0.2-bin/lib/
 file.reference.hsqldb.jar=../Librairies/UCanAccess-4.0.2-bin/lib/hsqldb.jar
 file.reference.ini4j-0.5.4-jdk14.jar=../Librairies/ini4j-0.5.4/ini4j-0.5.4-jdk14.jar
 file.reference.jackcess-2.1.6.jar=../Librairies/UCanAccess-4.0.2-bin/lib/jackcess-2.1.6.jar
-file.reference.sqlite-jdbc-3.20.0.jar=../Librairies/sqlite-jdbc-3.20.0/sqlite-jdbc-3.20.0.jar
+file.reference.jcommon-1.0.23.jar=..\\Librairies\\jfreechart-1.0.19\\lib\\jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19.jar=..\\Librairies\\jfreechart-1.0.19\\lib\\jfreechart-1.0.19.jar
+file.reference.sqlite-jdbc-3.21.0.jar=..\\Librairies\\sqlite-jdbc-3.21.0\\sqlite-jdbc-3.21.0.jar
 file.reference.ucanaccess-4.0.2.jar=../Librairies/UCanAccess-4.0.2-bin/ucanaccess-4.0.2.jar
 includes=**
 jar.compress=false
@@ -43,7 +45,9 @@ javac.classpath=\
     ${file.reference.commons-logging-1.1.1.jar}:\
     ${file.reference.hsqldb.jar}:\
     ${file.reference.jackcess-2.1.6.jar}:\
-    ${file.reference.sqlite-jdbc-3.20.0.jar}
+    ${file.reference.jfreechart-1.0.19.jar}:\
+    ${file.reference.jcommon-1.0.23.jar}:\
+    ${file.reference.sqlite-jdbc-3.21.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
