--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,6 +34,8 @@ file.reference.ini4j-0.5.4-jdk14.jar=../Librairies/ini4j-0.5.4/ini4j-0.5.4-jdk14
 file.reference.jackcess-2.1.6.jar=../Librairies/UCanAccess-4.0.2-bin/lib/jackcess-2.1.6.jar
 file.reference.jcommon-1.0.23.jar=..\\Librairies\\jfreechart-1.0.19\\lib\\jcommon-1.0.23.jar
 file.reference.jfreechart-1.0.19.jar=..\\Librairies\\jfreechart-1.0.19\\lib\\jfreechart-1.0.19.jar
+file.reference.mysql-connector-java-5.1.44-bin.jar=..\\Librairies\\mysql-connector-java-5.1.44\\mysql-connector-java-5.1.44-bin.jar
+file.reference.postgresql-42.1.4.jar=..\\Librairies\\postgresql-42.1.4\\postgresql-42.1.4.jar
 file.reference.sqlite-jdbc-3.21.0.jar=..\\Librairies\\sqlite-jdbc-3.21.0\\sqlite-jdbc-3.21.0.jar
 file.reference.ucanaccess-4.0.2.jar=../Librairies/UCanAccess-4.0.2-bin/ucanaccess-4.0.2.jar
 includes=**
@@ -47,7 +49,9 @@ javac.classpath=\
     ${file.reference.jackcess-2.1.6.jar}:\
     ${file.reference.jfreechart-1.0.19.jar}:\
     ${file.reference.jcommon-1.0.23.jar}:\
-    ${file.reference.sqlite-jdbc-3.21.0.jar}
+    ${file.reference.sqlite-jdbc-3.21.0.jar}:\
+    ${file.reference.mysql-connector-java-5.1.44-bin.jar}:\
+    ${file.reference.postgresql-42.1.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
