--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -27,31 +27,31 @@ dist.dir=dist
 dist.jar=${dist.dir}/StatsMorts.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
-file.reference.commons-lang-2.6.jar=../Librairies/UCanAccess-4.0.2-bin/lib/commons-lang-2.6.jar
-file.reference.commons-logging-1.1.1.jar=../Librairies/UCanAccess-4.0.2-bin/lib/commons-logging-1.1.1.jar
-file.reference.hsqldb.jar=../Librairies/UCanAccess-4.0.2-bin/lib/hsqldb.jar
-file.reference.ini4j-0.5.4-jdk14.jar=../Librairies/ini4j-0.5.4/ini4j-0.5.4-jdk14.jar
-file.reference.jackcess-2.1.6.jar=../Librairies/UCanAccess-4.0.2-bin/lib/jackcess-2.1.6.jar
-file.reference.jcommon-1.0.23.jar=..\\Librairies\\jfreechart-1.0.19\\lib\\jcommon-1.0.23.jar
-file.reference.jfreechart-1.0.19.jar=..\\Librairies\\jfreechart-1.0.19\\lib\\jfreechart-1.0.19.jar
-file.reference.mysql-connector-java-5.1.44-bin.jar=..\\Librairies\\mysql-connector-java-5.1.44\\mysql-connector-java-5.1.44-bin.jar
-file.reference.postgresql-42.1.4.jar=..\\Librairies\\postgresql-42.1.4\\postgresql-42.1.4.jar
-file.reference.sqlite-jdbc-3.21.0.jar=..\\Librairies\\sqlite-jdbc-3.21.0\\sqlite-jdbc-3.21.0.jar
-file.reference.ucanaccess-4.0.2.jar=../Librairies/UCanAccess-4.0.2-bin/ucanaccess-4.0.2.jar
+file.reference.commons-lang-2.6.jar=lib\\commons-lang-2.6.jar
+file.reference.commons-logging-1.1.1.jar=lib\\commons-logging-1.1.1.jar
+file.reference.hsqldb.jar=lib\\hsqldb.jar
+file.reference.ini4j-0.5.4.jar=lib\\ini4j-0.5.4.jar
+file.reference.jackcess-2.1.6.jar=lib\\jackcess-2.1.6.jar
+file.reference.jcommon-1.0.23.jar=lib\\jcommon-1.0.23.jar
+file.reference.jfreechart-1.0.19.jar=lib\\jfreechart-1.0.19.jar
+file.reference.mysql-connector-java-5.1.44-bin.jar=lib\\mysql-connector-java-5.1.44-bin.jar
+file.reference.postgresql-42.1.4.jar=lib\\postgresql-42.1.4.jar
+file.reference.sqlite-jdbc-3.21.0.jar=lib\\sqlite-jdbc-3.21.0.jar
+file.reference.ucanaccess-4.0.2.jar=lib\\ucanaccess-4.0.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.ini4j-0.5.4-jdk14.jar}:\
-    ${file.reference.ucanaccess-4.0.2.jar}:\
     ${file.reference.commons-lang-2.6.jar}:\
     ${file.reference.commons-logging-1.1.1.jar}:\
     ${file.reference.hsqldb.jar}:\
+    ${file.reference.ini4j-0.5.4.jar}:\
     ${file.reference.jackcess-2.1.6.jar}:\
-    ${file.reference.jfreechart-1.0.19.jar}:\
     ${file.reference.jcommon-1.0.23.jar}:\
-    ${file.reference.sqlite-jdbc-3.21.0.jar}:\
+    ${file.reference.jfreechart-1.0.19.jar}:\
     ${file.reference.mysql-connector-java-5.1.44-bin.jar}:\
-    ${file.reference.postgresql-42.1.4.jar}
+    ${file.reference.postgresql-42.1.4.jar}:\
+    ${file.reference.sqlite-jdbc-3.21.0.jar}:\
+    ${file.reference.ucanaccess-4.0.2.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
