--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,11 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=StatsMorts
+application.vendor=Robin
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,6 +28,7 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/StatsMorts.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
 file.reference.commons-lang-2.6.jar=lib\\commons-lang-2.6.jar
 file.reference.commons-logging-1.1.1.jar=lib\\commons-logging-1.1.1.jar
@@ -33,13 +36,16 @@ file.reference.hsqldb.jar=lib\\hsqldb.jar
 file.reference.ini4j-0.5.4.jar=lib\\ini4j-0.5.4.jar
 file.reference.jackcess-2.1.6.jar=lib\\jackcess-2.1.6.jar
 file.reference.jcommon-1.0.23.jar=lib\\jcommon-1.0.23.jar
+file.reference.jdatepicker-1.3.4.jar=lib\\jdatepicker-1.3.4.jar
 file.reference.jfreechart-1.0.19.jar=lib\\jfreechart-1.0.19.jar
 file.reference.mysql-connector-java-5.1.44-bin.jar=lib\\mysql-connector-java-5.1.44-bin.jar
 file.reference.postgresql-42.1.4.jar=lib\\postgresql-42.1.4.jar
 file.reference.sqlite-jdbc-3.21.0.jar=lib\\sqlite-jdbc-3.21.0.jar
 file.reference.ucanaccess-4.0.2.jar=lib\\ucanaccess-4.0.2.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
+jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.commons-lang-2.6.jar}:\
     ${file.reference.commons-logging-1.1.1.jar}:\
@@ -51,7 +57,8 @@ javac.classpath=\
     ${file.reference.mysql-connector-java-5.1.44-bin.jar}:\
     ${file.reference.postgresql-42.1.4.jar}:\
     ${file.reference.sqlite-jdbc-3.21.0.jar}:\
-    ${file.reference.ucanaccess-4.0.2.jar}
+    ${file.reference.ucanaccess-4.0.2.jar}:\
+    ${file.reference.jdatepicker-1.3.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -78,7 +85,24 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=statsmorts.Main
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
+main.class=statsmorts.main.Main
+# Optional override of default Application-Library-Allowable-Codebase attribute identifying the locations where your signed RIA is expected to be found.
+manifest.custom.application.library.allowable.codebase=
+# Optional override of default Caller-Allowable-Codebase attribute identifying the domains from which JavaScript code can make calls to your RIA without security prompts.
+manifest.custom.caller.allowable.codebase=
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
